<resources>
    <string name="app_name">Pulse Player</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="no_queued_tracks_title">NO QUEUED TRACKS</string>
    <string name="no_queued_tracks_message">Tap the + icon to create a pulse playlist</string>

    <string name="playlist_loading_text">Creating playlist…</string>
    <string name="measuring">Measuring…</string>

    <string name="offline">OFFLINE</string>
    <string name="offline_message">Please login to Spotify to continue</string>

    <string name="spotify_login">LOG IN TO SPOTIFY</string>
    <string name="spotify_logout">LOG OUT OF SPOTIFY</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="home">Home</string>
    <string name="pulse">Pulse Player</string>
    <string name="bpm">BPM</string>
    <string name="heart_rate_instructions">Tap to begin</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="title_genres_list">Select which genres you prefer</string>
    <string-array name="genres_list">
        <item>All</item>
        <item>Pop</item>
        <item>Rock</item>
        <item>Rap</item>
    </string-array>

    <string-array name="empty_array">
        <item>All</item>
    </string-array>
</resources>
