<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <MultiSelectListPreference
        android:defaultValue="@array/empty_array"
        android:persistent="true"
        android:entries="@array/genres_list"
        android:entryValues="@array/genres_list"
        android:key="genre_list"
        android:title="@string/title_genres_list"
        android:negativeButtonText="Save"
        android:positiveButtonText="Cancel" />

    <Preference
        android:id="@+id/spotify_settings_button"
        android:key="button"
        android:background="@drawable/spotify_button" />

</PreferenceScreen>
